--- a/create.html
+++ b/create.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Create a Zilchy.link short URL</title>
+  <title>Zilchy.link – Create a new link</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Create a new Zilchy.link short URL and submit it via GitHub pull request." />
   <link rel="stylesheet" href="styles.css">
@@ -12,13 +12,17 @@
     <header class="brand">
       <div class="logo-circle">Z</div>
       <div>
-        <h1>Create a Zilchy link</h1>
-        <p class="tagline">Fully FOSS. No backend. Just pull requests.</p>
+        <h1>Zilchy.link</h1>
+        <p class="tagline">Almost no link.</p>
       </div>
     </header>
 
     <section class="search-area">
       <form id="createForm" autocomplete="off">
+        <h2 class="result-heading" style="margin-top:0;margin-bottom:10px;">
+          Create a new link
+        </h2>
+
         <label for="longUrl" class="field-label">
           Long URL to shorten
         </label>
@@ -65,8 +69,8 @@
       <h3 class="result-subheading">How to create a pull request</h3>
       <ol class="steps">
         <li>
-          Open the Zilchy.link GitHub repository in your browser.
-          (For example: <code>https://github.com/&lt;your-user&gt;/zilchy.link</code> or the main upstream repo.)
+          Open the Zilchy.link GitHub repository in your browser
+          (for example: <code>https://github.com/&lt;your-user&gt;/zilchy.link</code> or the main upstream repo).
         </li>
         <li>
           Click <strong>Fork</strong> to create your own copy of the repository (if you haven’t already).
