--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
       filter: blur(0.4px);
     }
 
+    .button-row {
+    display: flex;
+    gap: 10px;
+    margin-top: 22px;
+  }
+
     .page-center {
       display: flex;
       align-items: center;
