--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
       filter: blur(0.4px);
     }
 
-    .button-row {
-    display: flex;
-    gap: 10px;
-    margin-top: 22px;
-  }
+     .button-row {
+      display: flex;
+      gap: 10px;
+      margin-top: 18px;     /* <-- ADDED / INCREASED */
+    }
 
     .page-center {
       display: flex;
