--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
       </p>
 
       <label for="customCode" class="field-label">Custom code (optional)</label>
-      <input id="customCode" type="text" spellcheck="false" placeholder="e.g. securesme" />
+      <input id="customCode" type="text" spellcheck="false" placeholder="e.g. survey" />
       <p class="hint small" id="customCodeHint">
         Letters and numbers only · case insensitive · must not already be in use.
       </p>
