--- a/index.html
+++ b/index.html
@@ -509,6 +509,10 @@
     const goBtn = document.getElementById('goBtn');
     const resultPanel = document.getElementById('resultPanel');
 
+        // Put the caret straight into the main box on load
+    input.focus();
+
+
     const longUrlDisplay = document.getElementById('longUrlDisplay');
     const codeOut = document.getElementById('codeOut');
     const shortOut = document.getElementById('shortOut');
