--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <link rel="icon" href="/icon.png" sizes="any">
+  <link rel="apple-touch-icon" href="/icon.png">
+  <link rel="manifest" href="/manifest.json">
   <title>Zilchy.link – Almost no link</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Zilchy.link – tiny, hand-crafted short links. Almost no link." />
@@ -398,6 +401,36 @@
       );
   }
 
+    @media (max-width: 800px) {
+    .search-area {
+      position: sticky;
+      top: 0;
+      z-index: 50;
+      margin-top: 6px;
+      border-radius: 0 0 var(--radius-lg) var(--radius-lg);
+      backdrop-filter: blur(10px);
+    }
+  }
+
+#longUrlDisplay {
+  display: block;
+  word-break: break-all;
+  white-space: normal;
+  line-height: 1.3;
+}
+
+@media (max-height: 450px) and (orientation: landscape) {
+  .brand {
+    position: sticky;
+    top: 0;
+    z-index: 40;
+    background: rgba(6,10,30,0.95);
+    padding: 10px 14px;
+    backdrop-filter: blur(10px);
+  }
+}
+
+
   </style>
 
 </head>
@@ -718,12 +751,19 @@
       });
     });
 
-    document.addEventListener("mousemove", (e) => {
+  document.addEventListener("mousemove", (e) => {
   document.body.classList.add("mousemove");
   document.documentElement.style.setProperty("--mx", e.clientX + "px");
   document.documentElement.style.setProperty("--my", e.clientY + "px");
 });
 
+  window.addEventListener("load", () => {
+    setTimeout(() => {
+      input.focus({ preventScroll: true });
+    }, 150);
+  });
+
+    
   </script>
 </body>
 </html>
