--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     body {
       margin: 0;
       padding: 0;
-      height: 100%;
+      min-height: 100%;
     }
 
     body.page {
@@ -451,6 +451,11 @@
         display: none;
       }
     }
+
+  html {
+    overscroll-behavior-y: auto;
+  }
+
   </style>
 
 </head>
