--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
 
   <!-- SVG favicon (modern browsers) -->
   <link rel="icon" type="image/svg+xml" href="/zilchy-icon.svg">
-  <!-- Manifest stays if you want PWA support later -->
+
+  <!-- (Optional PNG fallbacks if you export them later)
+  <link rel="icon" type="image/png" sizes="192x192" href="/zilchy-icon-192.png">
+  <link rel="apple-touch-icon" href="/zilchy-icon-192.png">
+  -->
+
+  <!-- Manifest for future PWA support -->
   <link rel="manifest" href="/manifest.json">
 
   <title>Zilchy.link – Almost no link</title>
@@ -39,7 +45,7 @@
     body {
       margin: 0;
       padding: 0;
-      min-height: 100%;
+      min-height: 100vh;
     }
 
     body.page {
@@ -48,11 +54,10 @@
       background: radial-gradient(circle at 0% 0%, #111827 0, #020313 45%, #020008 100%);
       color: var(--text-main);
       overflow-x: hidden;
-    }
 
-    /* DO NOT FLEX THE BODY ANYMORE – avoids scroll clipping on tall content */
-    .page-center {
-      /* left intentionally empty */
+      /* flex column layout so we can centre the main block nicely */
+      display: flex;
+      flex-direction: column;
     }
 
     /* Neon pipes background */
@@ -83,19 +88,16 @@
       filter: blur(0.4px);
     }
 
-    .shell {
+    /* Main content block – vertically centred on desktop when content is short */
+    main.shell {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
       width: 100%;
       max-width: 680px;
       margin: 0 auto;
       padding: 32px 20px;
-    }
-
-    /* Desktop-ish: push shell down so card sits visually in the middle */
-    @media (min-width: 1024px) and (min-height: 700px) {
-      .shell {
-        padding-top: 18vh;   /* ~centre on big screens */
-        padding-bottom: 10vh;
-      }
     }
 
     /* Branding header */
@@ -452,13 +454,10 @@
         display: none;
       }
     }
-
-    html {
-      overscroll-behavior-y: auto;
-    }
   </style>
+
 </head>
-<body class="page page-center">
+<body class="page">
   <div id="distort-overlay"></div>
   <main class="shell">
     <header class="brand">
@@ -788,7 +787,7 @@
       }, 150);
     });
 
-    /* Back to input button (mobile-only via CSS) */
+    /* Back to input button (mobile-only via CSS) – full reload to reset state */
     if (backToInputBtn) {
       backToInputBtn.addEventListener("click", () => {
         window.location.reload();
