--- a/404.html
+++ b/404.html
@@ -50,6 +50,31 @@
         gap: 14px;
         margin-bottom: 32px;
       }
+
+      .logo-circle {
+        width: 46px;
+        height: 46px;
+        border-radius: 999px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: 700;
+        letter-spacing: 0.03em;
+        background:
+          radial-gradient(circle at 0% 0%, #ffffff, #5bffea 40%, #7c3aed 70%, #020617 100%);
+        color: #0b1020;
+        box-shadow:
+          0 0 0 1px rgba(255, 255, 255, 0.16),
+          0 0 25px rgba(91, 255, 234, 0.9);
+      }
+      
+      .logo-circle img.logo-img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;  /* keeps it perfectly centered & cropped */
+        border-radius: 999px; /* ensures it stays circular */
+      }
+
     
     /* Neon pipes background */
     body.page::before {
